+ add consume code route + service
